[package]
name = "teams-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1", features = [ "attributes" ] }
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6", features = [  "runtime-async-std-native-tls", "sqlite" ] }
tide = "0.16.0"

[dev-dependencies]
proptest = "1.0.0"
