
[project]
name = "teams-maker"
version = "0.0.1"
description = "Create random teams with funny names based on a list of participants"
authors = [{ name = "Dimitri Merejkowsky", email = "dimitri@dmerej.info" }]
readme = "README.md"
license = "BSD-3-Clause"

[project.scripts]
teams-maker = "teams_maker.cli:main"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.3"
Faker = "^30"
flake8 = "^5.0"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.4.0"
pep8-naming = "^0.11.1"
pytest = "^8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
